load("//tools/extract:extract_pairs.bzl", "name_pairs")

PAGES = {
    "fokozottan_vedett_izeltlabuak": 2,
}

SAMPLES = [
    "tests/%s_%d.samples.json" % (name, page)
    for (name, pages) in PAGES.items()
    for page in range(pages)
]

IGNORES = {
    "fokozottan_vedett_izeltlabuak_0_pairs": "tests/fokozottan_vedett_izeltlabuak_0.ignore.txt",
    "fokozottan_vedett_izeltlabuak_1_pairs": "tests/fokozottan_vedett_izeltlabuak_1.ignore.txt",
}

[
    name_pairs(
        name = "%s_%d_pairs" % (name, page),
        src = "@%s_%d//file" % (name, page),
        ignore = IGNORES.get("%s_%d_pairs" % (name, page)),
        samples = SAMPLES[i],
        tool = "//tools/extract:enfo_hu",
    )
    for name, pages in PAGES.items()
    for i, page in enumerate(range(pages))
]
