sources = use_extension("//tools:source_extensions.bzl", "sources")

URL = "https://enfo.hu/keptar/%d?page=%d"  # % (id, page)

PAGES = {
    ("fokozottan_vedett_izeltlabuak", 8058): [
        ("QmS6xSyjmZCwBCCnf9womxaCjg3JsBeayqcvRJLNNJ87wN", "572c66ec61853ba66ffe96ddae80d3247d6ab7e7ba181fb1e662819059016a1a"),
        ("Qmd6KM9tGLsFfJxXStgw7poPP1KnmgAvQUjCevTqKh3hkq", "9ebfa8f6f031be162dee3d08529415a8bd5598e8e6a4d4c67a3a3ba96aa58d0b"),
    ],
}

[[
    sources.external_source(
        name = "%s_%d" % (name, page),
        ipfs_cid = cid,
        sha256 = sha256,
        updated_on = "2026-04-07",
        url = URL % (id, page),
    )
    for page, (cid, sha256) in enumerate(contents)
] for (name, id), contents in PAGES.items()]

[
    [use_repo(sources, "%s_%d" % (name, page)) for page in range(len(contents))]
    for (name, id), contents in PAGES.items()
]
