load(
    "//tools/docling:docx_file.bzl",
    "docx_file",
)
load("//tools/docling:markdown_file.bzl", "markdown_file")
load(
    "//tools/docling:pptx_file.bzl",
    "pptx_file",
)

exports_files([
    "HU.MODULE.bazel",
])

_MODELS = "//tools/docling/models:default"

_PDF_PUBLICATIONS = [
    "alkalmazott_novenytan_1_2020",
    "alkalmazott_novenytan_2_2020",
    "alkalmazott_novenytan_3_2020",
    "alkalmazott_novenytan_4_2020",
    "dyogynovenyek_es_elelmiszernovenyek_a_tol_z_ig",
    "fajfelismeres_fas_2021",
    "fasitasra_novenytelepitesre_javasolt_oshonos_novenyek_jegyzeke",
    "invazios_novenyfajok_magyarorszagon",
    "kepes_zengolegyhatarozo",
    "melleklet_felmert_novenyek_h2_tervlap",
    "nagy_szikibagoly",
    "novenytani_ismeretek",
    "wild_plants_used_for_food_by_hungarian_ethnic_groups_living_in_the_carpathian_basin",
]

_PPT_PUBLICATIONS = [
    "alkalmazott_novenytan_5_2019",
    "alkalmazott_novenytan_6_2019",
    "alkalmazott_novenytan_7_2019",
    "alkalmazott_novenytan_8_2019",
    "alkalmazott_novenytan_9_2019",
    "alkalmazott_novenytan_10_2019",
    "alkalmazott_novenytan_11_2019",
    "alkalmazott_novenytan_12_2019",
    "rendszertan1v_2021",
    "rendszertan2v",
    "rendszertan3v",
    "rendszertan4v",
    "rendszertan5v",
    "rendszertan6v",
    "rendszertan7v",
    "rendszertan8v",
    "rendszertan9v_2017",
    "rendszertan10v_2017",
    "rendszertan11v_2017",
]

_DOC_PUBLICATIONS = [
    "novenytani_jegyzet_fajleirasok",
    "novenytan_jegyzet_elmeleti_resz",
]

[
    markdown_file(
        name = publication + "_md",
        src = "@%s//file" % publication,
        models = _MODELS,
    )
    for publication in _PDF_PUBLICATIONS
]

[
    pptx_file(
        name = publication + "_pptx",
        src = "@%s//file" % publication,
    )
    for publication in _PPT_PUBLICATIONS
]

[
    markdown_file(
        name = publication + "_md",
        src = ":" + publication + "_pptx",
        models = _MODELS,
    )
    for publication in _PPT_PUBLICATIONS
]

[
    docx_file(
        name = publication + "_docx",
        src = "@%s//file" % publication,
    )
    for publication in _DOC_PUBLICATIONS
]

[
    markdown_file(
        name = publication + "_md",
        src = ":" + publication + "_docx",
        models = _MODELS,
    )
    for publication in _DOC_PUBLICATIONS
]

filegroup(
    name = "alkalmazott_novenytan_md",
    srcs = [":" + publication + "_md" for publication in _PDF_PUBLICATIONS + _PPT_PUBLICATIONS + _DOC_PUBLICATIONS],
)
