sources = use_extension("//tools:source_extensions.bzl", "sources")

ALKALMAZOTT_NOVENYTAN_BASE_URL = "http://nti.emk.uni-sopron.hu/images/Oktatás/Oktatási segédletek/Alkalmazott növénytan/"

ALKALMAZOTT_NOVENYTAN_PUBLICATIONS = [
    ("QmeUd9wEKMPhP3YMxvHvZwfyegtt2F9EqSzNpYoLSX98tP", "b40bf765356884c4485a071d6a929322b47c68ca4716d9d3882822695e41da99", "Alkalmazott növénytan 1 2020.pdf"),
    ("QmPv3A1WN9QhzCsdsGcTs2PhqxgUgRKUX1HAmPLED1Pwhq", "fcbafbbd611b65c4598e1057cd5b8b2b9ac6df90ed5c978d544473c8283cd3cc", "Alkalmazott növénytan 2 2020.pdf"),
    ("QmUGFTRfDwZVTzZUCJM4zHeMqo9nE83KgYk5tVC591KTTV", "9a22011a9e76078c9e5eedf3e8818edf6e4a329f7d1c5d0cb0189d3ad025ead2", "Alkalmazott növénytan 3 2020.pdf"),
    ("QmP93Cj4pmyhyqBdEFVLnoHtr7EzSiDpfPQ8q6wWgR97QT", "35c3410d6fbec51ba6b6130e9a2450ce95440a4c87aa9e1a38b69893e0fd4fbe", "Alkalmazott növénytan 4 2020.pdf"),
    ("QmdENfAK8pz2StGtgvJkBUzTvUA45vAB2nh9Apn3L2Uo9T", "bb92c5775a00847a170ba13590d2a5499e6b9075db54d699f90c1d6792372134", "Alkalmazott növénytan 5 2019.ppt"),
    ("QmRejtRR3WbQRfT7tH8PfrLcuDNXs4eXFeCQdNPrdeZU2G", "625dba8a3a3db2d7cadc1460857b6e19e81ef5b86b71b6c24444bdf0bfa8bf77", "Alkalmazott növénytan 6 2019.ppt"),
    ("Qme7nBg7ouoHc4NEggzkakm8aMRxWZSDBSffVSj5XyRcHH", "1e79a6a3bd2f598559649e3cff1c9df00cae2ea76899e6ec091c177e0db2fae4", "Alkalmazott növénytan 7 2019.ppt"),
    ("QmTGWBefXfjfubCqun8hXXRkgb8btDJRD4qnvcKbfftZiN", "624f37c734b1d6923b9674195162efba36ae9bb74ea856e8d51c706effbd106b", "Alkalmazott növénytan 8 2019.ppt"),
    ("QmRwa6F1qZB7dt1hwma6rhjVh16JjZnRXSFfQJX5E5ovBT", "8b847ff1c57e2c1423b4c2beb8a70008bdd7c7e8283498ba2d091156b7b31c3a", "Alkalmazott növénytan 9 2019.ppt"),
    ("QmVWG1Z1STA15GYDye32yrrXxUbFnavvvb91C6TtHdYb2M", "b7357fdf7eaa22836f49dcf09f401bc11681e79fef4488648001c5daeff0a389", "Alkalmazott növénytan 10 2019.ppt"),
    ("QmSEZd92Cr9s92UysdRatsTdjoBsQ8DTZDo2NgygPHWCA6", "8c526d1f63cbefeee6c9036195a2eee39e16f4b4c025d30643c246bccf9b8a23", "Alkalmazott növénytan 11 2019.ppt"),
    ("QmbtegeLLPsvCbfCmK8EgsuVYZszVSexf1YnWzQTSXwKcJ", "ac5da6773fdafa2ea114c98d93b9d682a78dbd05f957cc13e69a8f95740893d8", "Alkalmazott növénytan 12 2019.ppt"),
    ("QmbRkj3pFEQcD7KgvJGCtbwyRe2YYsTAUdoQMcdWThxu7p", "ebfb141c7e2515f693e9a4dcfa21383831a0eb62f9899e25bd4aa98cbfc65ef1", "Növénytani jegyzet - Fajleírások .doc"),
    ("QmTHcL1jo25yCy4BSSiAWo2H1Z2ESQkPRGy1hf8QPitZZP", "6eb11d21985a17f90296ab1c1e462dc84a6a85b02f5274e0ee90d254939fa6b2", "Növénytan jegyzet - Elméleti rész.doc"),
    ("QmYkzAgSvbLjw8mKDVcefHKXEG97XhDxkBjsc2B2udRcC6", "695422481ca495e24dae2db06e59cd8df66588129d3bda14e2bacda51d67e90e", "rendszertan1v_2021.ppt"),
    ("QmXKCd1irsXacbQL7AYvGdyJrxw9BoQ7ojFUAiMmNto1G8", "37269c10bbc718bfb5bc40642bc6f2d013322cef88f12e75b0954eb30af5f3de", "rendszertan2v.ppt"),
    ("QmW2sDJrRYwmWVa4KdzeKQHoRvfzi6muHLF19aaW1QtXYR", "c9847e2f490eca5f002d641f2d6747e5e19a58b26a5ff8dd16e698c7d399da86", "rendszertan3v.ppt"),
    ("QmQskn3PDeCLFrvgprcynhdEhiM41TFic7xHd7KBXzSCCL", "0727b8931f7652e03ac015fce8cd64a2880a14813d95805bc92564dc469126c9", "rendszertan4v.ppt"),
    ("QmccLw271iTm43KGyDcZ4WhHqECqWumHip6m8X2n3tNqSD", "36fd8496c7cc81ac6cf09f55e4cbc3a0603ef73e56619c37ca16e5e2f2755ffe", "rendszertan5v.ppt"),
    ("QmWJToXcxeAaujbqPRaa1euM17pWkWqYGuxNDxN6mJqZMv", "522d0f3e51728cee5d20bb345d8d550e27b54695665893b159a0122deba4144e", "rendszertan6v.ppt"),
    ("QmbTCTcGGxQgVg2U4bDi296k8GE8JiaptuLBE55JGDaAkG", "34864a9a7aac2aa1859781801aa74a21c8c7afbccd68e29686a1db6a5040c265", "rendszertan7v.ppt"),
    ("QmQTvunxCBH4fvL66WyHBpVmRp5Y1zdSBcNNgSzk4b7MdH", "9fb31c62616143e2669dd08f05c5407d7cf1365365fdc2af0c5e0312f3cf6c8c", "rendszertan8v.ppt"),
    ("QmceZayN2r1W5UnF4rKeJrn1wG6MapHVi6cWbyfUJ4btx2", "ca06c5b9d8e2c9565d9667724fb7e98ef3b911c7b8724b8ad60fcf2b4892f1d4", "rendszertan9v_2017.ppt"),
    ("QmXXq98bDX6ZdDCaMT5Xh8QADWLGdnYUArbT2iHuYL5d2W", "4554a5fa3d8c3b860c2c252c39100408243a161fe8bbe070ea7e614f4e8b2255", "rendszertan10v_2017.ppt"),
    ("QmTxXVU6hbREMtmAsQobjUyEPidfpnfwj9V2R1raG3ksFs", "d6dc854a321dc16bb750f6c265d9095598c88c4e296f75ed5ec503cf5c9dc53e", "rendszertan11v_2017.ppt"),
]

ALKALMAZOTT_NOVENYTAN_PUBLICATION_NAMES = {
    cid: "_".join([part for part in file_name.split(".")[0].lower().replace("á", "a").replace("é", "e").replace("í", "i").replace("ö", "o").replace(" ", "_").replace("-", "_").split("_") if part])
    for cid, _, file_name in ALKALMAZOTT_NOVENYTAN_PUBLICATIONS
}

[
    sources.external_source(
        name = ALKALMAZOTT_NOVENYTAN_PUBLICATION_NAMES[cid],
        ipfs_cid = cid,
        sha256 = sha256,
        updated_on = "2026-04-05",
        url = ALKALMAZOTT_NOVENYTAN_BASE_URL + file_name,
    )
    for cid, sha256, file_name in ALKALMAZOTT_NOVENYTAN_PUBLICATIONS
]

sources.external_source(
    name = "gyogynovenyek_es_elelmiszernovenyek_a_tol_z_ig",
    ipfs_cid = "QmbW85pMCZCsjYco472s33fQz7nYzDjySdwADZjc2wnPuQ",
    sha256 = "9c618ab34fc948c2f79321fa92d0cf6ec8430ee1aea1857c0dec769a4fb11219",
    updated_on = "2026-04-07",
    url = "http://www.melius.hu/gyogy/gyogynov-a-zuj.pdf",
)
sources.external_source(
    name = "fajfelismeres_fas_2021",
    ipfs_cid = "QmPzgaicQP9LzvPDTgMDEygBQzqU3maa47A8HJipGNUeQa",
    sha256 = "2eb8147434e081855f3b463fbe47cce952f56ffafd3d7fa23db465156745a07f",
    updated_on = "2026-04-07",
    url = "https://faragore95.web.elte.hu/4.félév/biogeo gy/Fajfelismeres-Fas2011.pdf",
)
sources.external_source(
    name = "fasitasra_novenytelepitesre_javasolt_oshonos_novenyek",
    ipfs_cid = "Qme6DsAtv4EYSNkNCm4J8Am4pB9VHQMK8zPHPiHkwbWnKd",
    sha256 = "3e0b2a00bf635f473f692d61565acacc6d28b95a384c0ca9bd121b44b48eca41",
    updated_on = "2026-04-07",
    url = "https://or.njt.hu/download/1049/resources/EJR_18440762-3._mell_klet.pdf",
)
sources.external_source(
    name = "invazios_novenyfajok_magyarorszagon",
    ipfs_cid = "QmSffSQrWmZcLVzwRuvmHbRueLoTmrxW2ZDUs8vMEvosN7",
    sha256 = "6aaca2990d18481cef9560a5c361a1789614dc5393026da88e73eee307f403ef",
    updated_on = "2026-04-07",
    url = "https://mek.oszk.hu/11700/11738/11738.pdf",
)
sources.external_source(
    name = "kepes_zengolegyhatarozo",
    ipfs_cid = "QmWgcZzGAr2Ko21ndepk4LokAEh4Rn5immQBEsgnb9Mxtc",
    sha256 = "0327d01df00665848130ef066aa49f333b4e5a2000ed64f6c2c7b73606a29ea1",
    updated_on = "2026-04-07",
    url = "https://real-j.mtak.hu/9142/7/EPA01957_e-acta_15_2017.pdf",
)
sources.external_source(
    name = "melleklet_felmert_novenyek_h2_tervlap",
    ipfs_cid = "QmNNrG22ycZHZe5XE2kMLxeLEgzYtWJYBvPrGNZBePYFvX",
    sha256 = "f1071b2ab893b70cb5858fd25b97babc2c2f662135f1d46785dbe345e89eb55a",
    updated_on = "2026-04-07",
    url = "https://stud.mater.uni-mate.hu/9633/2/835493664_szdmelleklet.pdf",
)
sources.external_source(
    name = "nagy_szikibagoly",
    ipfs_cid = "QmYEhVDJ3gjpStmRWYreMg9NwinEiEPiZzkVPav7seqqfE",
    sha256 = "69feaeebc51281f40ffc439ca4f50d299d02b8bb232f5700e6c50873a1d3a510",
    updated_on = "2026-04-07",
    url = "https://enfo.hu/sites/default/files/nagy szikibagoly.pdf",
)
sources.external_source(
    name = "novenytani_ismeretek",
    ipfs_cid = "Qmf9y6KeVqw7qSstLGsMgY84JCQRRnuefBVLrwQEyRPwhn",
    sha256 = "f9d27fece23824241ff46d8644386bd89daf83bc8a34dd20f5162b82a8f17cf3",
    updated_on = "2026-04-07",
    url = "https://real.mtak.hu/136608/1/Fodorpataki-Novenytani_online.pdf",
)
sources.external_source(
    name = "wild_plants_used_for_food",
    ipfs_cid = "QmQgPbkwwqWyTLu1ppBmZ1du69vWv8jcy3a4Qg6Gu32dfT",
    sha256 = "401b94081569c6d1aa225ff90a1f22cc718f622f06a85f512a8b06bd55183160",
    updated_on = "2026-04-07",
    url = "https://real.mtak.hu/27860/1/1031_3181_5_PB_u.pdf",
)

## TODO:
# https://mek.oszk.hu/07700/07707/07707.pdf
# https://www.mezogazdasagikonyvtar.hu/assets/digitarchiv/NAGYLAKI-Novenytani-szotar_1942_OCR.pdf

[use_repo(sources, ALKALMAZOTT_NOVENYTAN_PUBLICATION_NAMES[cid]) for cid, _, _ in ALKALMAZOTT_NOVENYTAN_PUBLICATIONS]

use_repo(
    sources,
    "fajfelismeres_fas_2021",
    "fasitasra_novenytelepitesre_javasolt_oshonos_novenyek",
    "gyogynovenyek_es_elelmiszernovenyek_a_tol_z_ig",
    "invazios_novenyfajok_magyarorszagon",
    "kepes_zengolegyhatarozo",
    "melleklet_felmert_novenyek_h2_tervlap",
    "nagy_szikibagoly",
    "novenytani_ismeretek",
    "wild_plants_used_for_food",
)
