load("//tools/extract:extract_pairs.bzl", "name_pairs")
load("//tools/wiki:wiki_page.bzl", "wiki_page")

PAGES = {
    "Latin/Magyarországon_védett_állatok": "latin_magyarorszagon_vedett_allatok",
}

EXTRACTORS = "//tools/extract/%s" % package_name().split("/")[-1]

[
    [
        wiki_page(
            name = name,
            src = "@huwikibooks_xml//file",
            title = title,
        ),
        name_pairs(
            name = "%s_pairs" % name,
            src = ":%s" % name,
            samples = ":tests/%s.samples.json" % name,
            tool = "%s:%s" % (EXTRACTORS, name),
        ),
    ]
    for title, name in PAGES.items()
]

_NOVENYEK_SUFFIXES_AND_TITLES = [
    ("a", "A"),
    ("b", "B"),
    ("c", "C"),
    ("d", "D"),
    ("e", "E"),
    ("f", "F"),
    ("g", "G"),
    ("h", "H"),
    ("i", "I"),
    ("j", "J"),
    ("k", "K"),
    ("l", "L"),
    ("m", "M"),
    ("n", "N"),
    ("o", "O"),
    ("oe", "Ö"),
    ("p", "P"),
    ("r", "R"),
    ("s", "S"),
    ("sz", "Sz"),
    ("t", "T"),
    ("u", "U"),
    ("ue", "Ü"),
    ("v", "V"),
    ("w", "W"),
    ("x_y", "X,Y"),
    ("z", "Z"),
    ("zs", "Zs"),
]

[
    wiki_page(
        name = "novenyek_magyar_latin_nepies_" + suffix,
        src = "@huwikibooks_xml//file",
        title = "Növények/Magyar-Latin-Népies/" + title,
    )
    for suffix, title in _NOVENYEK_SUFFIXES_AND_TITLES
]

[
    name_pairs(
        name = "novenyek_magyar_latin_nepies_" + suffix + "_pairs",
        src = ":novenyek_magyar_latin_nepies_" + suffix,
        ignore = ":tests/novenyek_magyar_latin_nepies_" + suffix + ".ignore.txt" if suffix in [
            "a",
            "b",
            "c",
            "f",
            "g",
            "h",
            "k",
            "m",
            "o",
            "r",
            "s",
            "sz",
            "v",
        ] else None,
        samples = ":tests/novenyek_magyar_latin_nepies_" + suffix + ".samples.json" if suffix in [
            "a",
            "b",
            "c",
            "d",
            "e",
            "f",
            "g",
            "h",
            "o",
            "oe",
            "p",
            "s",
            "r",
            "t",
            "x_y",
        ] else None,
        tool = "%s:novenyek_magyar_latin_nepies" % EXTRACTORS,
    )
    for suffix, _ in _NOVENYEK_SUFFIXES_AND_TITLES
]
