load("//tools/extract:extract_pairs.bzl", "name_pairs")
load("//tools/wiki:wiki_page.bzl", "ABC_SHORT", "wiki_page")

SRC = "@huwikibooks_xml//file"

EXTRACTORS = "//tools/extract/%s" % package_name().split("/")[-1]

[
    [
        wiki_page(
            name = name,
            src = SRC,
            title = title,
        ),
        name_pairs(
            name = "%s_pairs" % name,
            src = ":%s" % name,
            samples = ":tests/%s.samples.json" % name,
            tool = "%s:%s" % (EXTRACTORS, name),
        ),
    ]
    for title, name in {
        title: title.lower().replace("/", "_").replace("á", "a").replace("é", "e")
        for title in [
            "Latin/Magyarországon_védett_állatok",
        ]
    }.items()
]

_NOVENYEK_SUFFIXES_AND_TITLES = [(y, x) for x, y in ABC_SHORT.items()]

[
    wiki_page(
        name = "novenyek_magyar_latin_nepies_" + suffix,
        src = SRC,
        title = "Növények/Magyar-Latin-Népies/" + title,
    )
    for suffix, title in _NOVENYEK_SUFFIXES_AND_TITLES
]

[
    name_pairs(
        name = "novenyek_magyar_latin_nepies_" + suffix + "_pairs",
        src = ":novenyek_magyar_latin_nepies_" + suffix,
        ignore = ":tests/novenyek_magyar_latin_nepies_" + suffix + ".ignore.txt" if suffix in [
            "a",
            "b",
            "c",
            "f",
            "g",
            "h",
            "k",
            "m",
            "o",
            "r",
            "s",
            "sz",
            "v",
        ] else None,
        samples = ":tests/novenyek_magyar_latin_nepies_" + suffix + ".samples.json" if suffix in [
            "a",
            "b",
            "c",
            "d",
            "e",
            "f",
            "g",
            "h",
            "o",
            "oe",
            "p",
            "s",
            "r",
            "t",
            "xy",
        ] else None,
        tool = "%s:novenyek_magyar_latin_nepies" % EXTRACTORS,
    )
    for suffix, _ in _NOVENYEK_SUFFIXES_AND_TITLES
]
