load("//tools/extract:extract_pairs.bzl", "name_pairs")
load("//tools/wiki:wiki_page.bzl", "ABC_SHORT", "wiki_page")

SRC = "@huwikibooks_xml//file"

EXTRACTORS = "//tools/extract/%s" % package_name().split("/")[-1]

[
    [
        wiki_page(
            name = name,
            src = SRC,
            title = title,
        ),
        name_pairs(
            name = "%s_pairs" % name,
            src = ":%s" % name,
            samples = ":tests/%s.samples.json" % name,
            tool = "%s:%s" % (EXTRACTORS, name),
        ),
    ]
    for title, name in {
        title: title.lower().replace("/", "_").replace("á", "a").replace("é", "e")
        for title in [
            "Latin/Magyarországon_védett_állatok",
        ]
    }.items()
]

[
    [
        wiki_page(
            name = "novenyek_magyar_latin_nepies_%s" % slug,
            src = SRC,
            title = "Növények/Magyar-Latin-Népies/%s" % letter,
        ),
        name_pairs(
            name = "novenyek_magyar_latin_nepies_%s_pairs" % slug,
            src = ":novenyek_magyar_latin_nepies_%s" % slug,
            ignore = ":tests/novenyek_magyar_latin_nepies_%s.ignore.txt" % slug if slug in [
                "a",
                "b",
                "c",
                "f",
                "g",
                "h",
                "k",
                "m",
                "o",
                "r",
                "s",
                "sz",
                "v",
            ] else None,
            samples = ":tests/novenyek_magyar_latin_nepies_%s.samples.json" % slug if slug in [
                "a",
                "b",
                "c",
                "d",
                "e",
                "f",
                "g",
                "h",
                "k",
                "o",
                "oe",
                "p",
                "s",
                "r",
                "t",
                "xy",
            ] else None,
            tool = "%s:novenyek_magyar_latin_nepies" % EXTRACTORS,
        ),
    ]
    for letter, slug in ABC_SHORT.items()
]
