sources = use_extension("//tools:source_extensions.bzl", "sources")
sources.wikibooks_hu_source(
    name = "latin_magyarorszagon_vedett_allatok",
    ipfs_cid = "QmVQcCEf9DBBXDAHxS7wSCVZTbNCTThf8ovsBu3Lsat4bM",
    sha256 = "ca6d8608ffe42f878564ef3d6e6b2635904ccf27a5764ce58db3ea8b8c43cf01",
    title = "Latin/Magyarországon_védett_állatok",
    updated_on = "2026-04-07",
)

WIKIBOOKS_NOVENYEK_MAGYAR_LATIN_NEPIES_PUBLICATIONS = [
    ("QmTjoWhWPQhaLrL3K8fWTEDmuKZq1nzGDpt3DQoav9vz5F", "6dafc64ec4b6bd48f5952ac8a71837a0c69f2332dbcd96ca06cb7fb17030985f", "A"),
    ("Qmbs46ybr1gWdnr59JJnmx7Lru4LuXGKJNpDJivcnXNut7", "235aa1c13e8b10a602db9c336d11abb8e7707291a0647dfc27bbe36dd9bc98be", "B"),
    ("QmTFiVRciaR4FHPv5Wp6UpNSNponxPW165eCBZnbtYqmkN", "85af88aeac18648f91450fd5b0cffa84e74456c8ba8afb81b802a18839905c20", "C"),
    ("QmRdWzBroNo5QrGaCvfZFbSmQtL7MhxoK9m4inybXRvcDc", "d1df59c7ee31d0a663b57520b10eec0e297d5e38b7e57cc351bc2e9014dec663", "D"),
    ("Qmeqhc4TxsBXDXdhTHN27Vn1kCrKNzjK5yvUijKFu579gC", "235f5cf1b8c363dcd3d85574b96f4d99da9e91c8098463aad5fa5c0f39cbe7e6", "E"),
    ("QmT6S9KuGXAhwkbAo1qsKfsDS5qsamrjkMqWdrBaRXqFVF", "f556c6b175d133f66e90bd4eb8b5dd0cdfecb53661417e16ca1b89e9e4c98335", "F"),
    ("QmPLHfYuQNCGwu1UTLuz8nnoK1tteNuHxjX51dHLddgy1x", "c3b60dad9467d46208adfd14bf55ca9d242ead85389867729e79979d8e9bf61a", "G"),
    ("QmRijs5gBhbydsJj5mGyMqZJmVsWjikZWhhhae2WPkJ4Fw", "f4d20c1859c580e035c03dab80af9bceaa4023f807035d7280f5fefa3b143dcb", "H"),
    ("QmQtT2p1FQ2Rbqrt64JswuZDU722UN3cn163tKTbgBmpXt", "f973b0be7bab575215a22c09d3546b356b9a16f3264883b4c019c158fdf3b5c0", "I"),
    ("QmRsAnvjFhhBB5AkAGj8gGbCkG7qqJTVKsaJvNQvb4Dtk9", "0bec11e7c55f1dcdb1d132014bd210eec044ce7cd3ba7b7bd8aed19f42eb3b3a", "J"),
    ("QmfTWKDkeR6Lhn5wC7ukp2xUxJa7NVdpNHi8nqFvJWXmqB", "ddaa19559c03da6df46cafa84eb25a9f38d60bdb8583f77bcd37c3b10a0922f3", "K"),
    ("QmWDFmjTmLmCovykr6ScBB5AGMsA3DsqxBWu2kgsHNAek6", "bcd21e29fa044f09a744e839b5260174dd62cf436d0e2c3de7274aa71fb70f69", "L"),
    ("QmYPAZbZUH4jHGGYb8PUqURnWVLHsvK6ZywXEtPmgoPbnb", "4c49e879220a423224f6650c33d6dee3e12fb3bc81f200c72af67f51d8a10ab0", "M"),
    ("QmStgzwb8sib955xotLr1ZT7kX2FaotCscV5W5EiQ33XvM", "97ef4e8f7d4fee9a9b758d68c05a5c67fedf820d3b5606c2082ffed8c93a1da2", "N"),
    ("QmXanaRzFi4FM6qXpTpi1VjeU7n7wyNZu3ZEvLRCBWJTtZ", "0e3bab59ae0398695f3628d88bfd1269ab4c30c80f35e102aff546a300139f7f", "O"),
    ("QmZVsVKKe7pKNaCGdxnirQGGXQ34bGJiF3gULEr3rz9k4S", "0d309061b48ece0f958e0d031c53db43dd6d861ec7ed0d16d9f7f8318b0548b9", "Ö"),
    ("QmVkrzdfBR6guHUiMJzXYZDKyTX3chrfig78dqVG9mk4nD", "87a9808cbff3af299e14a06a77fb676af9b33404f1b944ebd4ddc23f7f868f21", "P"),
    ("QmcBBaWr7PNmairP2wkgTnxV1L4jk1iqBX7chFoF1mXN3w", "f997d7a9218913e90fb0b636c645d32a4ebdc47f188710279280e8a0a24a1712", "R"),
    ("QmcfbBYXmVf9sRFK65Ui1DSiPBYQ2k9SYKiPJiZJtKZwgE", "f292545fe8f8f9bb4d5e94ed3bfb622a33b409b7b945e8cb2410294e3b8779ab", "S"),
    ("QmUuf6TdgRinEi3iNiEVjV7u8L7gmTVz35MtvovDVDuCZ3", "cb442e84283264daa309e630945eb8c2579dffb9f8b8e876e17874318e9ed917", "Sz"),
    ("QmdUo2hNtGZetRt11oZEWKvmJAz7qbb2smnkBDwH7h97m2", "0fb7be33ef0c304e8f170a6bad67b2548f2c00308fa6bf1f521b59c11f0e1f37", "T"),
    ("QmTxohXfZ2GBQZGjkG4Q4HxD4EbqAzd74hHVqcbjbN3SBK", "a1e149ada6c7e4c59610e766decf21895590c82f9b80f5f104fac54270fbc4c2", "U"),
    ("QmRZgGuRqTAa1ruvDCfUejjhkeuzuLaDEoM48wGtPzZsrM", "5059caa9082897d6e9882b096be75e1c94bddd4677d78549556f86af93626618", "Ü"),
    ("QmXEpqkWiEymAGWhyifS81okLZaimbFcPG9rzXRdaMFdNS", "f028fe20a780c9f8b049fbc205db678a8399dea8eabefbc5c1d5aa43c45a961a", "V"),
    ("QmXz7ny1rArtbjzHYRE21my1phzHUrBFyJPWiLkAASu27d", "cc9c81e20a569fe2c7bfff77f131c9160d4fdb7c250f9acdb989607c24c1149f", "W"),
    ("QmWb3feotmfNGrfz9TcBj8XcPViSBj1kDqFL1cx1wrLywb", "5c891d11c18cc7fbd1cbc635caf1b4213f4a2cfe469e059ee78e9e127a7c3191", "X,Y"),
    ("QmWgLCBDfyWGfJ8eUasBnF61MRLx698ZJp7HHd92V9s9z6", "13282aecf01a9fa2ab117b5f7c19c937d533a0fac032bb6a220e67ae5486a3fe", "Z"),
    ("QmPUU52rT8qBG8e8Fk1ifo2EccZ3JQvXW7GVRTtmN4mRBE", "90bedf7550beee60593c880a52eafa941ef614fc061af875a7239c07077423a3", "Zs"),
]

WIKIBOOKS_NOVENYEK_MAGYAR_LATIN_NEPIES_REPO_SUFFIXES = {
    "X,Y": "x_y",
    "Ö": "oe",
    "Ü": "ue",
}

[
    sources.wikibooks_hu_source(
        name = "novenyek_magyar_latin_nepies_" + WIKIBOOKS_NOVENYEK_MAGYAR_LATIN_NEPIES_REPO_SUFFIXES.get(
            letter,
            letter.lower(),
        ),
        ipfs_cid = cid,
        sha256 = sha256,
        title = "Növények/Magyar-Latin-Népies/" + letter,
        updated_on = "2026-04-07",
    )
    for cid, sha256, letter in WIKIBOOKS_NOVENYEK_MAGYAR_LATIN_NEPIES_PUBLICATIONS
]

use_repo(
    sources,
    "latin_magyarorszagon_vedett_allatok",
)

[use_repo(
    sources,
    "novenyek_magyar_latin_nepies_" + WIKIBOOKS_NOVENYEK_MAGYAR_LATIN_NEPIES_REPO_SUFFIXES.get(
        letter,
        letter.lower(),
    ),
) for _, _, letter in WIKIBOOKS_NOVENYEK_MAGYAR_LATIN_NEPIES_PUBLICATIONS]
