load("@rules_python//python:defs.bzl", "py_library", "py_test")

exports_files(
    [
        "col_db.bzl",
        "import.sql.tpl",
        "lookup.py",
        "lookup_test.py",
        "pytest_runner.py",
        "schema.sql",
    ],
    visibility = ["//external_sources/col:__pkg__"],
)

py_library(
    name = "lookup",
    srcs = ["lookup.py"],
    visibility = ["//tools/col:__pkg__"],
    deps = ["//tools/python:nix_site_packages"],
)

py_test(
    name = "lookup_test",
    srcs = [
        "lookup_test.py",
        "pytest_runner.py",
    ],
    args = ["$(rootpath :lookup_test.py)"] + select({
        "//tools/python:coverage_enabled": [
            "--cov",
            "--cov-branch",
            "--cov-report=term-missing",
            "--cov-config=$(rootpath //tools/python:coverage.rc)",
        ],
        "//conditions:default": [],
    }),
    data = select({
        "//tools/python:coverage_enabled": ["//tools/python:coverage.rc"],
        "//conditions:default": [],
    }),
    main = "pytest_runner.py",
    deps = [
        ":lookup",
        "//tools/python:nix_site_packages",
    ],
)
