load("@rules_python//python:defs.bzl", "py_library", "py_test")

filegroup(
    name = "import_sql_tpl",
    srcs = ["import.sql.tpl"],
    visibility = ["//:__subpackages__"],
)

filegroup(
    name = "schema_sql",
    srcs = ["schema.sql"],
    visibility = ["//:__subpackages__"],
)

py_library(
    name = "lookup",
    srcs = ["lookup.py"],
    visibility = ["//tools/col:__pkg__"],
    deps = ["//tools/python:nix_site_packages"],
)

py_test(
    name = "lookup_test",
    srcs = [
        "lookup_test.py",
        "pytest_runner.py",
    ],
    args = ["$(rootpath :lookup_test.py)"] + select({
        "//tools/python:coverage_enabled": [
            "--cov",
            "--cov-branch",
            "--cov-report=term-missing",
            "--cov-config=$(rootpath //tools/python:coverage_rc)",
        ],
        "//conditions:default": [],
    }),
    data = select({
        "//tools/python:coverage_enabled": ["//tools/python:coverage_rc"],
        "//conditions:default": [],
    }),
    main = "pytest_runner.py",
    deps = [
        ":lookup",
        "//tools/python:nix_site_packages",
    ],
)
