load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "markdown_cleanup",
    srcs = ["markdown_cleanup.py"],
    main = "markdown_cleanup.py",
    python_version = "PY3",
    visibility = ["//visibility:public"],
)

exports_files([
    "markdown_file.bzl",
    "markdown_cleanup.py",
    "pptx_file.bzl",
])
